# hcloud-prom-filesd

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.sample.toml  config.sample.yaml
src/: cli.rs  config.rs  logging.rs  main.rs  prometheus.rs
