[package]
name = "hcloud-prom-filesd"
version = "0.3.1"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
chrono = "0.4"
fern = "0.6"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
hcloud = "0.13"
serde_json = "1"
anyhow = "1"
regex = "1"
lazy_static = "1"
tera = "1"
serde_yaml = "0.9"
ipnet = "2"
itertools = "0.10"
